--- a/PiniT/Views/Home/Index.cshtml
+++ b/PiniT/Views/Home/Index.cshtml
@@ -2,30 +2,81 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<style>
+    body {
+        background-image: url('../../Content/Images/backrf.jpg');
+    }
+</style>
 
-@*<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+@*<div class="row jumbotron-fluid">*@
+    <div class="homeimage">
+        <p align="right" class="homeimagetxt">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Blanditiis accusamus ex, <br> veritatis repellat laudantium, dolores <br> doloribus in praesentium dolore <br> reprehenderit omnis beatae numquam sed <br> eum quasi vero ipsa non porro.</p>
+
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+
+    <div class="homeboxa">
+        <p>Top of the week...</p>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+
+    <div class="homebox">
+        <div class="row">
+            <div class="col-md-4">
+                <h5>
+                    La Bella Mafia
+                </h5>
+                <img class="roundimage" src="~/Content/images/labellamafia.jpg" />
+            </div>
+            <div class="col-md-4">
+                <h5>God Bless America</h5>
+                <img class="roundimage" src="~/Content/images/god.jpg" />
+            </div>
+            <div class="col-md-4">
+                <h5>Tuapostoli Tokutuki</h5>
+                <img class="roundimage" src="~/Content/images/apostolis.jpg" />
+            </div>
+        </div>
     </div>
-</div>*@
+
+
+
+    <div class="homeboxa">
+        <div class="row">
+            <h2>  Are you hungry for...</h2>
+        </div>
+    </div>
+
+
+    <div class="homeboxb">
+    <div class="row">
+        <div class="col-md-4">
+            <h5>
+                Pizza
+            </h5>
+            <img class="roundimages" src="~/Content/images/pizza.jpg" />
+        </div>
+        <div class="col-md-4">
+            <h5>Burger</h5>
+            <img class="roundimages" src="~/Content/images/burger.jpg" />
+        </div>
+        <div class="col-md-4">
+            <h5>Grill</h5>
+            <img class="roundimages" src="~/Content/images/gril.jpg" />
+        </div>
+        <div class="col-md-4">
+            <h5>
+                pasta
+            </h5>
+            <img class="roundimages" src="~/Content/images/pasta.jpg" />
+        </div>
+        <div class="col-md-4">
+            <h5>Seafood</h5>
+            <img class="roundimages" src="~/Content/images/seafood.jpg" />
+        </div>
+        <div class="col-md-4">
+            <h5>Sushi</h5>
+            <img class="roundimages" src="~/Content/images/sushi.jpg" />
+        </div>
+    </div>
+    </div>
+
+@*</div>*@
