--- a/PiniT/Content/Site.css
+++ b/PiniT/Content/Site.css
@@ -3,6 +3,7 @@
     /*background-image: url("https://lonelyplanetimages.imgix.net/copilot/images/interest/food-and-drink.jpg?auto=compress&h=800");
     background-size: cover;*/
     padding-top: 50px;
+    /*background-image: url('Images/backr.jpg');*/
     padding-bottom: 20px;
 }
 
@@ -41,4 +42,67 @@ h3.a {
     margin-left: 160px;
     margin-bottom:10px;
     margin-top:5px;
+}
+
+
+.homeimage {
+    background-image: url('/Content/images/indexa.jpg');
+    height: 400px;
+    background-size: cover;
+    width: 100%;
+    margin-bottom:20px;
+}
+
+.homeimagetxt {
+    padding: 35px;
+    font-family: 'Courgette', cursive;
+    font-size: 200%;
+    grid-auto-rows: 150px;
+    color: white;
+    text-shadow: 3px 2px black;
+}
+
+.roundimage {
+    box-shadow: 4px 4px 4px #000000;
+    height: 200px;
+    width: 200px;
+    border-radius: 100%;
+}
+
+.roundimages {
+    height: 100px;
+    width: 100px;
+    border-radius: 100%;
+}
+
+.homebox {
+    padding: 10px;
+    background-color: brown;
+    opacity: 0.85;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-family: 'Berkshire Swash', cursive;
+    font-size: 100%;
+    color: white;
+    margin-bottom: 40px;
+}
+.homeboxa {
+    font-family: 'Lobster', cursive;
+    font-size: 200%;
+    color: white;
+    text-shadow: 3px 2px black;
+    padding: 10px;
+    background-color: #404040;
+    opacity: 1;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.homeboxb {
+    padding: 10px;
+    background-color: lightgrey;
+    opacity: 0.8;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-family: 'Berkshire Swash', cursive;
+    font-size: 100%;
+    color: black;
+    margin-bottom: 40px;
 }
