AccountWallets/Database/Credits/Admin/Layout

--- a/PiniT/Views/Admin/ProductCategoryIndex.cshtml
+++ b/PiniT/Views/Admin/ProductCategoryIndex.cshtml
@@ -12,18 +12,18 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(x => x.Name);
+            @Html.DisplayNameFor(x => x.Name)
         </th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Name);
+            @Html.DisplayFor(modelItem => item.Name)
         </td>
-        <td>
-            @*@Html.ActionLink("Delete", "Delete", new { id=item.Name })*@
-        </td>
+        @*<td>
+            @Html.ActionLink("Delete", "Delete", new { id=item.Name })
+        </td>*@
     </tr>
 }
 
