--- a/PiniT/Views/AccountWallets/AddCredits.cshtml
+++ b/PiniT/Views/AccountWallets/AddCredits.cshtml
@@ -4,15 +4,13 @@
     ViewBag.Title = "AddCredits";
 }
 
-<h2>AddCredits</h2>
-
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>AccountWallet</h4>
+        <h4 class="h2 mx-auto my-2">Add Credits To Your PiniT Wallet!</h4>
+        <p> Simply Enter the amount you want to Add!</p>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Wallet.Id)
@@ -31,15 +29,11 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Submit" class="btn btn-danger" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "CustomerIndex", "Restaurants", null, new { @class = "btn btn-primary" })
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
