--- a/PiniT/Views/Restaurants/CustomerIndex.cshtml
+++ b/PiniT/Views/Restaurants/CustomerIndex.cshtml
@@ -10,10 +10,12 @@
             background-image: url("https://as2.ftcdn.net/jpg/02/56/04/19/500_F_256041907_eWiahJpwVZG5rjyrGX8w42l2K2ZVSXyx.jpg");
             background-size: cover;
             background-repeat: no-repeat;
-            image-resolution:2000dpi;
-            opacity:0.9;
             /*background-repeat: no-repeat;
             background-size: auto;*/
+        }
+        .card-img-top{
+            width:250px;
+            height:250px;
         }
     </style>
 <br>
