--- a/PiniT/Views/Home/About.cshtml
+++ b/PiniT/Views/Home/About.cshtml
@@ -1,7 +1,61 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "How it works";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+@*<h2>@ViewBag.Title.</h2>*@
+@*<h3>@ViewBag.Message</h3>*@
 
-<p>Use this area to provide additional information.</p>
+<style>
+    body {
+        /*background-image: url('../../Content/Images/backrf.jpg');*/
+        /*background-image: url('../../Content/Images/patern.png');*/
+        /*background-image: url('../../Content/Images/background.jpg');*/
+        /*background-image: url('../../Content/Images/table.jpg');*/
+        background-image: url('../../Content/Images/background.jpg');
+    }
+</style>
+
+<div class="homeboxa">
+    <h1>How it works...</h1>
+</div>
+
+<div class="aboutimage">
+    
+
+    <div class="row">
+
+        <div class="col-md-4">
+            <div class="circle">
+                <p>
+                    1. Register
+                </p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="circle">
+                <p>2. Add Payment Method</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="circle">
+                <p>3.Search Restaurant</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="circle">
+                <p>
+                    4. Check The Menu
+                </p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="circle">
+                <p>5. Pick Restaurant</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="circle">
+                <p>6.Book Table</p>
+            </div>
+        </div>
+    </div>
+</div>
