--- a/PiniT/Views/Home/Index.cshtml
+++ b/PiniT/Views/Home/Index.cshtml
@@ -4,7 +4,10 @@
 
 <style>
     body {
-        background-image: url('../../Content/Images/backrf.jpg');
+        /*background-image: url('../../Content/Images/backrf.jpg');*/
+        /*background-image: url('../../Content/Images/patern.png');*/
+        /*background-image: url('../../Content/Images/backrfw.jpg');*/
+        background-image: url('../../Content/Images/background.jpg');
     }
 </style>
 
