--- a/PiniT/Views/Images/SetProfileImage.cshtml
+++ b/PiniT/Views/Images/SetProfileImage.cshtml
@@ -1,9 +1,78 @@
 ﻿@model IEnumerable<PiniT.Models.Image>
 
-@foreach (var img in Model)
-{
-    <img id="@img.ImageId" class="rest-img" src="@Url.Content(img.ImagePath)" alt="@img.Title" style="width:250px; height:250px;" />
-}
+<style>
+    .container {
+        position: relative;
+        width: 50%;
+    }
+
+    .rest-img {
+        opacity: 1;
+        display: flex;
+        width: 100%;
+        height: auto;
+        transition: .5s ease;
+        backface-visibility: hidden;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        cursor: pointer;
+    }
+
+    .middle {
+        transition: .5s ease;
+        opacity: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        cursor: pointer;
+        text-align: center;
+    }
+
+    .container:hover .image {
+        opacity: 0.1;
+        cursor: pointer;
+    }
+
+    .container:hover .middle {
+        cursor: pointer;
+        opacity: 1;
+    }
+
+    .text {
+        background-color: #4CAF50;
+        color: white;
+        font-size: 10px;
+        cursor: pointer;
+        padding: 12px 28px;
+    }
+</style>
+
+<h2 class="a text-center mx-auto mt-4 mb-4">Set Profile Image</h2>
+<hr />
+<div class="row border border-info bg-light">
+    @foreach (var img in Model)
+
+    {
+        <div class="container">
+            <img id="@img.ImageId" class="rest-img" src="@Url.Content(img.ImagePath)" alt="@img.Title" onclick="myFunction()" style="width:100%">
+            <div class="middle">
+                <div class="text">Set Profile Image</div>
+            </div>
+        </div>
+        @*<img id="@img.ImageId" class="rest-img" src="@Url.Content(img.ImagePath)" alt="@img.Title" style="width:250px; height:250px;" />*@
+    }
+</div>
+
+@*<div class="container">
+        <img id="@img.ImageId" class="rest-img" src="@Url.Content(img.ImagePath)" alt="@img.Title" style="width:100%">
+        <div class="middle">
+            <div class="text">John Doe</div>
+        </div>
+    </div>*@
+
+
 
 @section scripts{
     <script>
@@ -11,7 +80,7 @@
 
             $('.rest-img').on('click', (e) => {
 
-                fetch(`/Images/SetProfileImage/${e.currentTarget.id}`, {method:'POST'})
+                fetch(`/Images/SetProfileImage/${e.currentTarget.id}`, { method: 'POST' })
                     .then(response => response.json())
                     .then(json => {
                         console.log(json);
@@ -19,16 +88,16 @@
                             window.location.href = '/Restaurants/ManagerIndex';
                         }
                     })
-
-
             });
-
-
-
-
-
-
-
         });
+    </script>
+    <script>
+        function myFunction() {
+            alert("Image is set!");
+            //<div class="alert alert-success bg-light border boder-success alert-dismissible fade show">
+            //<button type="button" class="close" data-dismiss="alert">&times;</button>
+            //<strong>Success!</strong> This alert box could indicate a successful or positive action.
+            //</div>
+        }
     </script>
 }
